--- a/db_recyclerview/app/build.gradle
+++ b/db_recyclerview/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'//이미지 로딩을 원활하게 해주는 라이브러리
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0' //바텀네비게이션 뷰 디자인
 }
