--- a/db_recyclerview/app/src/main/AndroidManifest.xml
+++ b/db_recyclerview/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Db_recyclerview">
-        <activity android:name=".Subactivity"></activity>
+        <activity android:name=".InformActivity"></activity>
+        <activity android:name=".FoodActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
